src/test/ui/span/issue-42234-unknown-receiver-type.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-42234-unknown-receiver-type.rs:17:5
   |
17 |     x.unwrap().method_that_could_exist_on_some_type();
   |     ^^^^^^^^^^

error[E0282]: type annotations needed
  --> $DIR/issue-42234-unknown-receiver-type.rs:22:5
   |
22 | /     data.iter() //~ ERROR 22:5: 23:20: type annotations needed
23 | |         .sum::<_>()
   | |___________________^

error: aborting due to 2 previous errors

